apps/base/auth/authelia/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.needless.info`)
      kind: Rule
      services:
        - kind: Service
          name: authelia
          port: 9091
          sticky:
            cookie:
              httpOnly: true
              secure: true
              name: TraefikAutheliaSticky
